# claimsprocessing-ai-backend

./: .gitignore  Dockerfile  Dockerfile.old  README.md  TODO  cloudbuild.yaml  docker-compose.yml  docker-compose.yml.old  pyproject.toml
docs/: k.py  selenium_scraper.py
scripts/: install_browsers.py  profiling.py
src/: entry.py  main.py  manager.py  run_workflow.py  stirring_agent.py
src/ai/: llm.py  manager.py  model.py
src/ai/claims_processing/: agents.py  llm.py  llm_flow.py  manager.py  run_workflow.py  stirring_agent.py  toolkit.py  workflow_coordinator.py
src/ai/officer_interaction/: llm_flow.py  toolkit.py
src/ai/rag/: context_stuffing.py  doc_split.py  generate_embedding.py  load_dataset copy.py  retriever.py
src/ai/resources/: cost_benchmarking.py  db_ops.py  document_understanding.py  gen_mermaid.py  image_understanding.py  retrieve_vehicle_policy.py
src/ai/underwriting/: agents.py  llm_flow.py  toolkit.py
src/ai_models/: llm.py  model.py
src/ai_workflow/: Dockerfile  entry.py  main.py  manager.py  pyproject.toml  run_workflow.py  stirring_agent.py
src/ai_workflow/ai_models/: llm.py  model.py
src/ai_workflow/config/: appconfig.py  settings.py
src/ai_workflow/database/: db_ops.py  postgres.py  schemas.py
src/ai_workflow/distsys/: rabbitmq.py
src/ai_workflow/error_trace/: errorlogger.py
src/ai_workflow/models/: claim_processing.py
src/ai_workflow/parsers/: parser.py  policy_review_team_parser.py
src/ai_workflow/pb/: claims_processing_pb2.py  claims_processing_pb2_grpc.py
src/ai_workflow/protos/: claims_processing.proto
src/ai_workflow/rag/: context_stuffing.py  generate_embedding.py  load_dataset copy.py  retriever.py
src/ai_workflow/services/: ai_workflow.py
src/ai_workflow/teams/document_processing/: agents.py  tools.py
src/ai_workflow/teams/fraud_detection/: agents.py  tools.py
src/ai_workflow/teams/policy_review/: agents.py  tools.py
src/ai_workflow/teams/report/: agents.py
src/ai_workflow/teams/resources/: document_understanding.py  image_understanding.py
src/ai_workflow/teams/settlement_offer/: agents.py
src/ai_workflow/temp/: 2f02ead3-bfda-435a-87c2-11b6111d9a86
src/api/: Dockerfile  main.py  pyproject.toml
src/api/business_logic/: process_claim.py
src/api/config/: appconfig.py  db_setup.py  settings.py
src/api/database/: db_ops.py  schemas.py
src/api/datamodels/: api.py
src/api/dependencies/grpc/: ai_workflow.py
src/api/routes/: ai_workflow.py
src/application/: main.py
src/application/pb/: claims_processing_pb2_grpc.py
src/application/protos/: claims_processing.proto
src/application/workflow_orch/: entry.py  manager.py
src/config/: appconfig.py  db_setup.py  settings.py
src/database/: db_ops.py  mock.py  pd_db.py  postgres.py  schemas.py
src/database/claim_processing/: db_ops.py
src/datamodels/: claim_processing.py  co_ai.py
src/distsys/: rabbitmq.py
src/domain/ai_models/: llm.py
src/domain/pipelines/: config.py
src/domain/teams/: create_agent.py  create_agent_utils.py
src/error_trace/: errorlogger.py
src/infrastructure/: postgres.py
src/models/: claim_processing.py
src/officer_interaction/: agent_utils.py  callable.py  llm_flow.py  toolkit.py
src/officer_interaction/prompts/: instruction.yaml
src/officer_interaction/utilities/: parser.py  printer.py
src/parsers/: doc_team_parser.py  fraud_team_parser.py  parser.py  policy_review_team_parser.py  settlement_team_parser.py
src/pb/: claims_processing_pb2.py  claims_processing_pb2_grpc.py
src/pb/automation_service/: service_pb2.py  service_pb2_grpc.py
src/pipelines/: config.py  cost_benchmarking.py  niid_check.py
src/pipelines/local_markets/: _base.py  market_data_fetcher.py  price_analyzer.py
src/pipelines/price_analysis/: _price_analyzer.py  base.py  query_engine.py
src/protos/: claims_processing.proto
src/queries/: price_query.sql
src/rag/: context_stuffing.py  generate_embedding.py  load_dataset.py  retriever.py
src/resources/: cpu_running_task.py  db_ops.py  document_understanding.py  image_understanding.py  retrieve_vehicle_policy.py
src/services/: ai_workflow.py  call_automation.py
src/teams/: create_agent.py  create_agent_utils.py  stirring_agent.py
src/teams/policy_review/: agents.py  (+2 more)
src/utilities/: algos.py  helpers.py  image_handlers.py  messages.py  pdf_handlers.py
src/workflow_orch/: entry.py  manager.py  run_workflow.py
tests/: test_vin_checker.py  test_workflow.py  vin_data.py
tests/parsers/: test_doc_team_parser.py  test_fraud_team_parser.py  test_parser.py  test_policy_review_team_parser.py  test_settlement_team_parser.py
tests/rag/: test_context_stuffing.py
(+80 files in other folders)
