[tool.poetry]
name = "claimsprocessing-ai-backend"
version = "0.1.0"
description = ""
authors = ["Ayo Tosan Samuel <46663234+Stosan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-core = "^0.3.19"
langchain-community = "^0.3.7"
pydantic-settings = "^2.6.1"
pika = "^1.3.2"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
