[tool.poetry]
name = "claimsprocessing-ai-backend"
version = "0.1.0"
description = ""
authors = ["Ayo Tosan Samuel <46663234+Stosan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
langgraph = "^0.2.52"
langchain-community = "^0.3.7"
langchain = "^0.3.7"
langchain-google-vertexai = "2.0.7"
psycopg2-binary = "^2.9.10"
sqlalchemy = "2.0.35"
vertexai = "^1.71.1"
selenium = "^4.26.1"
pillow = "^11.0.0"
beautifulsoup4 = "^4.12.3"
celery = {extras = ["redis"], version = "^5.4.0"}
pydantic = "2.9.2"
pydantic-settings = "2.6.0"
pymupdf = "^1.24.14"
colorama = "^0.4.6"
jinja2 = "^3.1.4"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
